Bug 1568130 - Stop consuming key events on keyup since webpages may be listening for them. r=NeilDeakin

Differential Revision: https://phabricator.services.mozilla.com/D86861